# algoritmo-a-estrela

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/: experiments_result.csv
docs/: answers.md  main.tex
src/: aestrela.ipynb  utils.py
